kubernetes/overlays/prod/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-ratelimit
spec:
  rateLimit:
    average: 30
    burst: 50
