kubernetes/overlays/prod/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: haddok-prod-test-ratelimit@kubernetescrd
spec:
  rules:
  - host: sae503-prod.kaze-cloud.fr
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: api-users
            port:
              number: 5000
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: api-search
            port:
              number: 5000
      - path: /quotes
        pathType: Prefix
        backend:
          service:
            name: api-quotes
            port:
              number: 5000
